--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ initial-scale=1.0">
 <li style="color:#0C0">
 <a href="green.html">초록색 페이지</a>
 </li>
+<li style="color: #F0F"><a href="pink.html">핑크색 페이지</a></li>
 </ul>
 </body>
 </html>
